--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,9 +10,13 @@ html {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden !important;
+    overflow-y: auto !important;
     overflow-x: hidden !important;
-    overflow-y: hidden !important;
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 body {
@@ -25,7 +29,12 @@ body {
     height: 100%;
     width: 100%;
     overflow-x: hidden !important;
-    overflow-y: hidden !important;
+    overflow-y: auto !important;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 @media (min-width: 748px) {
